feat: update product publication model to include variantId for improved sales channel management